public/assets/styles/MyAccount.module.css
.cont{
    position: fixed;
    top: 0;
    right: 0;
    width: 100%;
    height: 100vh;
    z-index: 100000000000000000000;
    background-color: rgba(135, 134, 134, 0.5);
    overflow: hidden;
    transition: 0.5s;
}
.bx{
    position: fixed;
    top: 0;
    right: 0;
    width: 400px;
    height: 100%;
    z-index: 10;
    background: white;
    overflow: hidden;
    transition: 0.5s;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 10px;
}
.insertPhoto{
    position: relative;
    min-height: 20px;
    width: 100%;
    display: flex;
    align-items: center;
    padding-bottom: 20px;
}
.info{
    position: relative;
    padding-left: 20px;
    text-align: center;
}
.info .name span{
    position: relative;
    font-family: "PoppinsBolder";
    font-size: 1.2em;
}
.userName{
    color: black;
}
.selectedImageBx{
    position: relative;
    width: 100px;
    height: 100px;
    padding: 0;
    margin: 0;
    overflow: hidden;
    display: flex;
    align-items: center;
    justify-content: center;
    /*border: 2px solid var(--hlColor);*/
    border-radius: 50%;
    box-shadow:  4px 4px 8px #a2a2a2;
}
.optionsBx{
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0 auto;
    width: 100%;
    min-height: 300px;
    padding: 20px;
}
.option{
    position: relative;
    width: 100%;
    height: 50px;
    display: flex;
    align-items: center;
    background: var(--hlColor);
    justify-content: space-between;
    margin-top: 10px;
    margin-bottom: 10px;
    padding: 15px;
    border-radius: 10px;
    cursor: pointer;
}
.link{
    position: relative;
    width: 100%;
    height: 50px;
    display: flex;
    align-items: center;
    background: var(--hlColor);
    justify-content: space-between;
    margin-top: 10px;
    margin-bottom: 10px;
    padding: 15px;
    border-radius: 10px;
    cursor: pointer;
}
.option .icon{
    position: relative;
    font-size: 1.2em;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: 0.5s;
}
.option:hover{
    background: rgb(246, 99, 45);
}
.option .icon1{
    position: relative;
    transition: 0.5s;
    left: 0;
}
.option:hover .icon1{
    left: 10px;
}
.ajustes{
    position: relative;
    width: 100%;
    padding: 20px;
}
.ajustOptions{
    position: relative;
    width: 100%;
    padding: 15px;
    height: 70px;
    background: rgba(255, 69, 0,0.3);
    display: flex;
    align-items: center;
    justify-content: space-between;
    border-radius: 10px;
}
.text{
    position: relative;
    text-align: center;
    display: flex;
    flex-direction: column;
    
}
.text span:nth-child(1){
    font-family: "PoppinsBolder";
    color: rgb(70, 70, 70);
}
.text span:nth-child(2){
    font-size: 0.8em;
    color: rgb(70, 70, 70);
}
.iconAj{
    color: rgb(70, 70, 70);
    font-size: 1.2em;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}


@media(max-width:734px){
    .bx {
        width: 100%;
       }
   }

